# tinyxml

./: .gitignore  CMakeLists.txt  changes.txt  readme.md
src/: CMakeLists.txt
test/: CMakeLists.txt  xmltest.cpp
